--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -5,6 +5,8 @@ on:
 
 jobs:
   greet:
+    env:
+        MY_ENV: "John Doe"
     runs-on: ubuntu-latest
     steps:
       - name: Greet the User
@@ -13,3 +15,9 @@ jobs:
       - run: ls -l
       - uses: actions/checkout@v2
       - run: ls -l
+      # Add a second step to utilize the environment variable and a default one
+      - name: Run a multi-line script
+        run: |
+          echo "Hello $MY_ENV"
+          echo "Hello $GITHUB_ACTOR"
+  
