--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,12 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      # Required to allow actions/checkout to clone the repository onto the runner
+      contents: read
+      # Required to allow the vitest coverage action to write a comment into the pull request
+      pull-requests: write
+
     strategy:
       matrix:
         node-version: [20.x, 22.x]
